Make content and style changes

--- a/app/views/admin/document_collection_group_document_search/search_options.html.erb
+++ b/app/views/admin/document_collection_group_document_search/search_options.html.erb
@@ -16,8 +16,7 @@
     },
     {
       value: "title-or-slug",
-      text: "Search via title or slug",
-      hint_text: "This only applies to documents made in Whitehall publisher",
+      text: "Search via title",
     },
   ]
 %>
