--- a/app/assets/stylesheets/admin/views/_document-collection-group-document-search-search-title-slug.scss
+++ b/app/assets/stylesheets/admin/views/_document-collection-group-document-search-search-title-slug.scss
@@ -1,6 +1,10 @@
 .app-view-document-collection-document-search-results__table {
+  .govuk-table__cell:nth-child(2) {
+    white-space: nowrap;
+  }
+
   .govuk-table__cell,
-  .govuk-table__cell > * {
+  .govuk-table__cell * {
     vertical-align: middle;
   }
 
@@ -9,7 +13,6 @@
 
     .govuk-button--secondary {
       margin-left: govuk-spacing(3);
-      vertical-align: middle;
     }
   }
 }
