--- a/app/views/admin/editions/_standard_fields.html.erb
+++ b/app/views/admin/editions/_standard_fields.html.erb
@@ -63,7 +63,7 @@
       right_to_left: form.object.translation_rtl?,
       data_attributes: {
         image_ids: edition.images.map { |img| img[:id] }.to_json,
-        attachment_ids: edition.allows_attachments? ? edition.attachments.map(&:id) : [],
+        attachment_ids: edition.allows_inline_attachments? ? edition.attachments.map(&:id) : [],
         alternative_format_provider_id: (edition.alternative_format_provider_id || current_user.organisation.try(:id)),
       },
     } %>
