Show processing label for images that are still uploading
If any of the image variants are still uploading, a "Processing" label will
be shown. Similar behaviour already existed for files (will be changed from
saying "Uploading" to also saying "Processing").

The behaviour for files has also been recently changed so that the label shows
when any file versions are still being uploaded/processed rather than it
showing only when the original files is missing. This behaviour is now
consistent between files and images.

--- a/app/components/admin/edition_images/uploaded_images_component.html.erb
+++ b/app/components/admin/edition_images/uploaded_images_component.html.erb
@@ -21,6 +21,7 @@
   <% if lead_image %>
     <div class="govuk-grid-column-one-third">
       <img src="<%= lead_image[:url] %>" alt="<%= lead_image[:preview_alt_text] %>" class="app-view-edition-resource__preview">
+      <% unless lead_image[:all_image_asset_variants_uploaded] %><span class="govuk-tag govuk-tag--green">Processing</span><% end %>
     </div>
     <div class="govuk-grid-column-two-thirds">
       <p class="govuk-body"><strong>Caption: </strong><%= lead_image[:caption] %></p>
@@ -66,6 +67,7 @@
       <li class="govuk-grid-row">
         <div class="govuk-grid-column-one-third">
           <img src="<%= image[:url] %>" alt="<%= image[:preview_alt_text] %>" class="app-view-edition-resource__preview">
+          <% unless image[:all_image_asset_variants_uploaded] %><span class="govuk-tag govuk-tag--green">Processing</span><% end %>
         </div>
         <div class="govuk-grid-column-two-thirds">
           <p class="govuk-body"><strong>Caption: </strong><%= image[:caption] %></p>
