Updating the document-collections feature tests to cover the reordering of documents within a group functionality

--- a/app/views/admin/document_collection_group_memberships/reorder.html.erb
+++ b/app/views/admin/document_collection_group_memberships/reorder.html.erb
@@ -13,9 +13,9 @@
         items: @group.memberships.map do |membership|
           {
             id: membership.id,
-            title: membership.document.latest_edition.title
+            title: membership.document.latest_edition.title,
           }
-        end
+        end,
       } %>
 
       <div class="govuk-button-group govuk-!-margin-bottom-6">
@@ -25,8 +25,8 @@
             module: "gem-track-click",
             "track-category": "form-button",
             "track-action": "document-collection-groups-membership-reorder-button",
-            "track-label": "Save"
-          }
+            "track-label": "Save",
+          },
         } %>
         <%= link_to("Cancel", admin_document_collection_group_document_collection_group_memberships_path(@collection), class: "govuk-link govuk-link--no-visited-state") %>
       </div>
