Add hint text to preview
We are filtering out all files and images that have variants which are
still uploading. Adding a bit of text to describe this situation to the
users.

--- a/app/views/admin/editions/_standard_fields.html.erb
+++ b/app/views/admin/editions/_standard_fields.html.erb
@@ -53,6 +53,7 @@
     <%= render "components/govspeak-editor", {
       label: {
         text: "Body" + "#{' (required)' if form.object.body_required?}",
+        hint_text: "If your attachment is still being processed, it will not be visible in preview.",
         heading_size: "l",
       },
       name: "edition[body]",
