Consolidate fields into "Settings" section
Consolidate access limiting, scheduled publication and review reminder fields into a "Settings" section on the edition form, introducing a new header and reducing the header size of the other fields.

Update _settings_fields.html.erb

--- a/app/views/admin/editions/_scheduled_publication_fields.html.erb
+++ b/app/views/admin/editions/_scheduled_publication_fields.html.erb
@@ -1,4 +1,4 @@
-<div class="govuk-!-margin-bottom-8">
+<div class="govuk-!-margin-bottom-6">
   <%= hidden_field_tag :scheduled_publication_active, 0, id: "" %>
 
   <%# The date input needs a custom edition_scheduled_publication id passed into the day input so we can anchor error to the first input. %>
@@ -12,7 +12,7 @@
     name: "scheduled_publication_active",
     id: "scheduled_publication_active",
     heading: "Schedule publication",
-    heading_size: "l",
+    heading_size: "m",
     error_items: errors_for(edition.errors, :scheduled_publication_active),
     no_hint_text: true,
     items: [
@@ -21,6 +21,7 @@
         value: 1,
         checked: params[:scheduled_publication_active] == "1" || edition.scheduled_publication.present?,
         conditional: render("components/datetime_fields", {
+              heading_size: "s",
               field_name: "scheduled_publication",
               prefix: "edition",
               error_items: errors_for(edition.errors, :scheduled_publication),
