--- a/app/views/admin/editions/_review_reminder_fields.html.erb
+++ b/app/views/admin/editions/_review_reminder_fields.html.erb
@@ -1,11 +1,11 @@
-<div class="govuk-!-margin-bottom-8">
+<div class="govuk-!-margin-bottom-6">
   <%= form.fields_for :document do |document_form| %>
     <%= document_form.fields_for :review_reminder do |review_reminder_form| %>
       <%= render "govuk_publishing_components/components/checkboxes", {
         name: "review_reminder",
         id: "review_reminder",
         heading: "Review date",
-        heading_size: "l",
+        heading_size: "m",
         no_hint_text: true,
         items: [
           {
@@ -18,6 +18,7 @@
               track_action: "clicked",
             },
             conditional: render("components/datetime_fields", {
+              heading_size: "s",
               field_name: "review_at",
               prefix: "edition[document_attributes][review_reminder_attributes]",
               date_only: true,
@@ -49,7 +50,7 @@
               render("govuk_publishing_components/components/input", {
                 label: {
                   text: "Email address",
-                  heading_size: "m",
+                  heading_size: "s",
                 },
                 hint: "Enter a team email or your own email address to get a review reminder",
                 name: "edition[document_attributes][review_reminder_attributes][email_address]",
