added responsive designs to ensure that our service always uses the most up to date govuk design patterns

--- a/app/assets/stylesheets/admin/views/_document-collection-group-memberships-index.scss
+++ b/app/assets/stylesheets/admin/views/_document-collection-group-memberships-index.scss
@@ -16,8 +16,10 @@
   align-items: center;
 
   & > p:first-child {
+    @include govuk-responsive-padding(2, "right");
+    @include govuk-responsive-margin(2, "right");
     margin-right: 10px;
     padding-right: 10px;
-    border-right: 1px solid #b1b4b6;
+    border-right: 1px solid $govuk-border-colour;
   }
 }
