--- a/app/views/admin/editions/_settings_fields.html.erb
+++ b/app/views/admin/editions/_settings_fields.html.erb
@@ -5,6 +5,7 @@
         margin_bottom: 6,
     } %>
 
+    <%= render "accessible_attachment_field", form: form, edition: edition %>
     <%= render "access_limiting_fields", form: form, edition: edition %>
     <%= render "scheduled_publication_fields", form: form, edition: edition %>
     <%= render "review_reminder_fields", form: form, review_reminder: edition.document.review_reminder %>
