Move first_published_at partial into a view component
In order to get this component working it requires the first_published_at
values for day, month and year to be passed in when present. In addition
to whether it has been previously published.

These were previously pulled from the params. As you can get invalid
user input which we want to retain and re-render in the fields, we
can't do something like parsing the datetime from the object/fields
and pass that in as one paramater.

--- a/app/components/admin/editions/first_published_at_component.html.erb
+++ b/app/components/admin/editions/first_published_at_component.html.erb
@@ -7,21 +7,21 @@
       id: "edition_first_published_at_1i",
       year: {
         id: "edition_first_published_at_1i",
-        value: params.dig("edition", "first_published_at(1i)") || edition.first_published_at&.year,
+        value: year,
         name: "edition[first_published_at(1i)]",
         label: "Year",
         width: 4,
       },
       month: {
         id: "edition_first_published_at_2i",
-        value: params.dig("edition", "first_published_at(2i)") || edition.first_published_at&.month,
+        value: month,
         name: "edition[first_published_at(2i)]",
         label: "Month",
         width: 2,
       },
       day: {
         id: "edition_first_published_at_3i",
-        value: params.dig("edition", "first_published_at(3i)") || edition.first_published_at&.day,
+        value: day,
         name: "edition[first_published_at(3i)]",
         label: "Day",
         width: 2,
@@ -51,12 +51,12 @@
           {
             value: false,
             text: "This document has never been published before.",
-            checked: params.dig("edition", "previously_published") == "false" || edition.previously_published == false,
+            checked: previously_published,
           },
           {
             value: true,
             text: "This document has previously been published on another website.",
-            checked: params.dig("edition", "previously_published") == "true" || edition.previously_published == true,
+            checked: previously_published,
             conditional: first_published_at_fields,
           },
         ],
