--- a/app/views/admin/editions/_standard_fields.html.erb
+++ b/app/views/admin/editions/_standard_fields.html.erb
@@ -124,6 +124,10 @@
   <% end %>
 </div>
 
-<% unless edition.is_a?(Consultation) %>
-  <%= render "first_published_at", form: form, edition: edition %>
-<% end %>
+<%= render Admin::Editions::FirstPublishedAtComponent.new(
+  edition:,
+  previously_published: params.dig("edition", "previously_published") == "true" || edition.previously_published == true,
+  year: params.dig("edition", "first_published_at(1i)") || edition.first_published_at&.year,
+  month: params.dig("edition", "first_published_at(2i)") || edition.first_published_at&.month,
+  day: params.dig("edition", "first_published_at(3i)") || edition.first_published_at&.day,
+) %>
