--- a/app/components/admin/editions/first_published_at_component.html.erb
+++ b/app/components/admin/editions/first_published_at_component.html.erb
@@ -1,70 +1,26 @@
-<% first_published_at_fields = render("components/datetime_fields", {
-      field_name: "first_published_at",
-      prefix: "edition",
-      date_hint: "For example, 01 08 2022",
-      time_hint: "For example, 09:30 or 19:30",
-      error_items: errors_for(edition.errors, :first_published_at),
-      id: "edition_first_published_at_1i",
-      year: {
-        id: "edition_first_published_at_1i",
-        value: year,
-        name: "edition[first_published_at(1i)]",
-        label: "Year",
-        width: 4,
-      },
-      month: {
-        id: "edition_first_published_at_2i",
-        value: month,
-        name: "edition[first_published_at(2i)]",
-        label: "Month",
-        width: 2,
-      },
-      day: {
-        id: "edition_first_published_at_3i",
-        value: day,
-        name: "edition[first_published_at(3i)]",
-        label: "Day",
-        width: 2,
-      },
-      hour: {
-        value: params.dig("edition", "first_published_at(4i)")&.to_i || edition.first_published_at&.hour,
-        id: "edition_first_published_at_4i",
-      },
-      minute: {
-        value: params.dig("edition", "first_published_at(5i)")&.to_i || edition.first_published_at&.min,
-        id: "edition_first_published_at_5i",
-      },
-    }) %>
+<div class="govuk-!-margin-bottom-4">
+  <% if document_has_never_been_published? %>
+    <%= hidden_field_tag "edition[previously_published]", false %>
 
-<% if edition.published_major_version.nil? %>
-  <div class="govuk-!-margin-bottom-4">
-    <%= render "govuk_publishing_components/components/fieldset", {
-      legend_text: "Document status (required)",
+    <%= render "govuk_publishing_components/components/checkboxes", {
+      name: "edition[previously_published]",
+      id: "edition_previously_published",
+      heading: "First published date",
       heading_size: "l",
-      id: "edition_first_published_at",
-    } do %>
-      <%= render "govuk_publishing_components/components/radio", {
-        name: "edition[previously_published]",
-        id: "edition_previously_published",
-        error_items: errors_for(edition.errors, :previously_published),
-        items: [
-          {
-            value: false,
-            text: "This document has never been published before.",
-            checked: previously_published,
-          },
-          {
-            value: true,
-            text: "This document has previously been published on another website.",
-            checked: previously_published,
-            conditional: first_published_at_fields,
-          },
-        ],
-      } %>
-  </div>
-  <% end %>
-<% else %>
-  <div class="govuk-!-margin-bottom-4">
+      hint_text: "If this document has been published on another webpage, you must provide the date it was first published online." +
+        " This only applies to online content. Do not use this for file attachments.",
+      items: [
+        {
+          label: "This document has previously been published on another website",
+          value: true,
+          checked: previously_published,
+          conditional: capture do
+            first_published_at_fields
+          end,
+        },
+      ],
+    } %>
+  <% else %>
     <%= render "govuk_publishing_components/components/fieldset", {
       legend_text: "First published",
       heading_size: "l",
@@ -72,7 +28,9 @@
       id: "edition_first_published_at",
       error_message: errors_for_input(edition.errors, :first_published_at),
     } do %>
-      <%= first_published_at_fields %>
+      <% capture do %>
+        <%= first_published_at_fields %>
+      <% end %>
     <% end %>
-  </div>
-<% end %>
+  <% end %>
+</div>
