Ensure first published inputs don't retain values from params
At the moment, when a user unchecks the previously published checkbox and
doesn't clear the date inputs, on an unsuccessful save the date inputs
retain the values because they're still present in the params.

This fixes this by pulling the values from the edition_params which
have been cleaned of the values in before actions.

Instead of using #try to check for the presence of the edition params,
I could have added an additional before_action which cleaned the params
as well as the edition params, but i'm a bit loathe to add even more
bloat to the controller.

--- a/app/views/admin/editions/_standard_fields.html.erb
+++ b/app/views/admin/editions/_standard_fields.html.erb
@@ -127,7 +127,7 @@
 <%= render Admin::Editions::FirstPublishedAtComponent.new(
   edition:,
   previously_published: params.dig("edition", "previously_published") == "true" || edition.previously_published == true,
-  year: params.dig("edition", "first_published_at(1i)") || edition.first_published_at&.year,
-  month: params.dig("edition", "first_published_at(2i)") || edition.first_published_at&.month,
-  day: params.dig("edition", "first_published_at(3i)") || edition.first_published_at&.day,
+  year: @edition_params.try(:dig, "first_published_at(1i)") || edition.first_published_at&.year,
+  month: @edition_params.try(:dig, "first_published_at(2i)") || edition.first_published_at&.month,
+  day: @edition_params.try(:dig, "first_published_at(3i)") || edition.first_published_at&.day,
 ) %>
