--- a/app/views/admin/editions/_filter_options.html.erb
+++ b/app/views/admin/editions/_filter_options.html.erb
@@ -14,7 +14,7 @@
     <% if filter_by.include?(:title) %>
       <%= render "govuk_publishing_components/components/input", {
         label: {
-          text: "Title or slug",
+          text: "Title",
           bold: true,
         },
         name: "title",
