--- a/app/views/admin/statistics_announcements/_filter_options.html.erb
+++ b/app/views/admin/statistics_announcements/_filter_options.html.erb
@@ -7,7 +7,7 @@
 
     <%= render "govuk_publishing_components/components/input", {
       label: {
-        text: "Title or slug",
+        text: "Title",
         bold: true,
       },
       name: "title",
