--- a/app/views/admin/editions/_legacy_filter_options.html.erb
+++ b/app/views/admin/editions/_legacy_filter_options.html.erb
@@ -8,7 +8,7 @@
 
   <% if filter_by.include?(:title) %>
     <div class="filter-grouping" id="title_filter">
-      <%= label_tag :search_title, "Title or slug" %>
+      <%= label_tag :search_title, "Title" %>
       <div class="btn-enter-wrapper">
         <%= search_field_tag :title, @filter.options[:title], id: "search_title", class: "form-control", placeholder: "Search title", autocomplete: "off" %>
         <%= submit_tag "enter", class: "btn-enter js-btn-enter js-hidden" %>
