Maintain number of important board members on edit
The organisation form was defaulting to displaying the the maximum number of board member photos instead of respecting the saved value.

--- a/app/views/admin/organisations/_form.html.erb
+++ b/app/views/admin/organisations/_form.html.erb
@@ -328,7 +328,7 @@
           {
             text: n,
             value: n,
-            selected: @organisation.management_roles.count == n,
+            selected: @organisation.important_board_members == n,
           }
         end,
       } %>
