Transition main navigation to design system. This commit includes below changes: -Duplicated existing header partial view to legacy. -Created new header partial with design system logic for main navigation. -Added new method in base controller to handle toggle between legacy and new header views. -Updated admin and design_system views with new header partial view render. -Added  view tests to BaseController to verify new header renders for design system permissions.

--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -21,7 +21,7 @@
 <% end %>
 
 <% content_for :navbar do %>
-  <%= render "shared/header", admin_template: true %>
+  <%= render "shared/legacy_header", admin_template: true %>
   <% if t('admin.whats_new.show_banner') %>
     <div class="govuk-design-system-styling">
       <div class="<%= yield(:full_width) === "true" ? "app-width-container--full-width" : "container" %>">
