--- a/app/views/shared/_legacy_header.html.erb
+++ b/app/views/shared/_legacy_header.html.erb
@@ -1,39 +1,55 @@
+<% environment_style = GovukAdminTemplate.environment_style %>
+<% environment_label = GovukAdminTemplate.environment_label %>
 <% environment = GovukPublishingComponents::AppHelpers::Environment.current_acceptance_environment %>
 <% admin_template ||= false %>
 
-  <%= render "govuk_publishing_components/components/layout_header", {
-    product_name: "Whitehall Publisher",
-    environment: environment,
-    navigation_items: [
-      {
-        text: "Dashboard",
-        href: admin_root_path,
-      },
-      {
-        text: "View website",
-        href: Whitehall.public_root,
-      },
-      {
-        text: "Switch app",
-        href: Plek.external_url_for("signon"),
-      },
-      *(
-        if user_signed_in?
-          [{
-             text: current_user.name,
-             href: admin_user_path(current_user),
-           },
-           {
-             text: "Logout",
-             href: "/auth/gds/sign_out",
-           }]
-        end),
-      {
-        text: "All users",
-        href: admin_users_path,
-      },
-    ],
-  } %>
+<header class="
+  masthead
+  navbar
+  navbar-default
+  navbar-inverse
+  navbar-static-top
+  <% if !t('admin.whats_new.show_banner') && admin_template %>add-bottom-margin<% end %>
+  <% if environment_style %>environment-indicator<% end %>" role="banner">
+  <div class="navbar-container container-fluid">
+    <div class="navbar-header">
+      <%# Bootstrap toggle for collapsed navbar content, used at smaller widths %>
+      <a class="navbar-toggle" data-toggle="collapse" data-target="header .navbar-collapse">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </a>
+      <%= link_to "GOV.UK Whitehall", admin_root_path, :class => "navbar-brand" %>
+      <% if environment_label %>
+        <div class="environment-label">
+          <%= environment_label %>
+        </div>
+      <% end %>
+    </div>
+    <nav role="navigation" class="collapse navbar-collapse">
+      <ul class="nav navbar-nav">
+        <li><%= link_to "Dashboard", admin_root_path %></li>
+        <li><%= link_to "View website", Whitehall.public_root, class: "open_website" %></li>
+      </ul>
+      <div class="navbar-text pull-right remove-bottom-margin">
+        <ul class="list-inline">
+            <li>
+                <%= signon_link %>
+            </li>
+          <% if user_signed_in? %>
+            <li>
+              <%= link_to current_user.name, admin_user_path(current_user), id: "#user_settings" %>
+            </li>
+            <li>
+              <%= link_to "Logout", "/auth/gds/sign_out" %>
+            </li>
+          <% end %>
+          <%= admin_users_header_link %>
+        </ul>
+      </div>
+    </nav>
+  </div>
 
   <div class="container-fluid">
     <ul id="global-nav" class="masthead-tabs list-unstyled">
@@ -69,3 +85,4 @@
       <%= render partial: "shared/notices" %>
     </section>
   <% end %>
+</header>
