Add non-Whitehall document to document collection
Implement the post, using the GOV.UK Design System, for adding an external/non-Whitehall document to a document collection group.

Co-Authored-By: Rodney Johnson <rodney.johnson@digital.cabinet-office.gov.uk>
Co-Authored-By: Mark Taylor <mark.taylor1@digital.cabinet-office.gov.uk>

--- a/app/views/admin/document_collection_group_document_search/add_by_url.html.erb
+++ b/app/views/admin/document_collection_group_document_search/add_by_url.html.erb
@@ -10,7 +10,7 @@
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds app-view-document-collection-document-search-bar">
-    <%= form_with :get do |_form| %>
+    <%= form_with url: admin_document_collection_group_govuk_url_member_path(@collection, @group), method: :post do |_form| %>
       <%= render "govuk_publishing_components/components/input", {
         label: {
           text: "Add by URL",
