Reword Document Collection Add Document radio buttons
"Search by x" to be changed to "Add By x" since Adding URL doesn't involve searching.
The end goal for "Search by title" is also to add a document, so adding should work for both.

Co-Authored-By: Rodney Johnson <rodney.johnson@digital.cabinet-office.gov.uk>
Co-Authored-By: Mark Taylor <mark.taylor1@digital.cabinet-office.gov.uk>

--- a/app/views/admin/document_collection_group_document_search/search_options.html.erb
+++ b/app/views/admin/document_collection_group_document_search/search_options.html.erb
@@ -12,11 +12,11 @@
   search_options = [
     {
       value: "url",
-      text: "Search via URL",
+      text: "By URL",
     },
     {
       value: "title-or-slug",
-      text: "Search via title",
+      text: "By title",
     },
   ]
 %>
@@ -25,10 +25,8 @@
   <div class="govuk-grid-column-two-thirds">
     <%= form_with url: admin_document_collection_group_search_options_path(@collection, @group) do %>
       <%= render "govuk_publishing_components/components/radio", {
-        heading: "Search options",
         name: "search_option",
         id: "search_option",
-        heading_size: "l",
         items: search_options,
       } %>
 
