--- a/app/views/admin/document_collection_group_document_search/search_title_slug.html.erb
+++ b/app/views/admin/document_collection_group_document_search/search_title_slug.html.erb
@@ -27,7 +27,7 @@
       <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
 
       <% if @results.empty? %>
-        <p class="govuk-body app-view-document-collection-document-search-results__no_documents">No results found. Search again using the <%= link_to "full URL", "#", class: "govuk-link govuk-link--no-visited-state" %>.</p>
+        <p class="govuk-body app-view-document-collection-document-search-results__no_documents">No results found. Search again using the <%= link_to "full URL", admin_document_collection_group_add_by_url_path(@collection, @group), class: "govuk-link govuk-link--no-visited-state" %>.</p>
       <% else %>
         <div class="govuk-table--with-actions app-view-document-collection-document-search-results__table">
           <%= render "govuk_publishing_components/components/table",
