Added logic to hide Edit link when user has no GDS Editor permission.

--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -31,10 +31,7 @@
         {
           field: "World locations",
           value: show_world_locations(@user),
-          edit: {
-            href: show_edit_link(@user),
-            link_text: "Edit",
-          },
+          edit: show_edit_link(@user),
         },
       ],
     } %>
