--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,6 +11,7 @@ $govuk-page-width: 1140px;
 @import "./components/secondary-navigation";
 @import "./components/select-with-search";
 @import "./components/single-image-upload";
+@import "./components/sub-navigation";
 @import "./components/summary-card-component";
 
 @import "./admin/overrides";
