--- a/app/components/admin/editions/show/translations_summary_card_component.html.erb
+++ b/app/components/admin/editions/show/translations_summary_card_component.html.erb
@@ -1,4 +1,4 @@
-<%= render "components/summary_card_component", {
+<%= render "components/summary_card", {
   title: "Translations",
   summary_card_actions: summary_card_actions,
   rows: rows,
