--- a/app/components/admin/worldwide_offices/index/office_summary_card_component.html.erb
+++ b/app/components/admin/worldwide_offices/index/office_summary_card_component.html.erb
@@ -1,5 +1,5 @@
 <div class="app-vc-worldwide-offices-index-office-summary-card-component">
-  <%= render "components/summary_card_component", {
+  <%= render "components/summary_card", {
     title: contact.title,
     rows: rows,
     summary_card_actions: summary_card_actions,
