--- a/app/views/admin/promotional_feature_items/_promotional_feature_item.html.erb
+++ b/app/views/admin/promotional_feature_items/_promotional_feature_item.html.erb
@@ -1,4 +1,4 @@
-<%= render "components/summary_card_component", {
+<%= render "components/summary_card", {
   title: "Feature item #{promotional_feature_item.promotional_feature.promotional_feature_items.find_index(promotional_feature_item) + 1}",
   rows:
     [
