--- a/app/views/admin/contacts/_contact.html.erb
+++ b/app/views/admin/contacts/_contact.html.erb
@@ -1,4 +1,4 @@
-<%= render "components/summary_card_component", {
+<%= render "components/summary_card", {
   title: contact.title,
   rows: contact_rows(contact),
   summary_card_actions: [
