--- a/app/views/admin/contacts/_translated_contact.html.erb
+++ b/app/views/admin/contacts/_translated_contact.html.erb
@@ -1,4 +1,4 @@
-<%= render "components/summary_card_component", {
+<%= render "components/summary_card", {
   title: translated_contact.title,
   rows: contact_rows(translated_contact),
   summary_card_actions: [
