--- a/app/views/admin/document_collection_groups/index.html.erb
+++ b/app/views/admin/document_collection_groups/index.html.erb
@@ -9,7 +9,7 @@
       items: secondary_navigation_tabs_items(@collection, request.path),
     } %>
 
-    <%= render "components/summary_card_component", {
+    <%= render "components/summary_card", {
       title: "Document collections",
       rows: @collection.groups.map do |group|
         {
