--- a/app/views/admin/organisations_about/show.html.erb
+++ b/app/views/admin/organisations_about/show.html.erb
@@ -26,7 +26,7 @@
     } %>
 
     <% if @organisation.about_us.present? %>
-      <%= render "components/summary_card_component", {
+      <%= render "components/summary_card", {
         title: "About us",
         rows: [
           {
