Refactor summary card list to a multi-part component
We need the summary card component to support arbitrary content for the new document summary hub designs. In order to achieve the goal, this commit changes the summary card list component so that it yields a block of content passed in from the consuming component.

In order to ensure that consuming components are easily able to meet the accessibility requirements for any action links associated with list items from inside the card content, this commit factors out a "summary list action" component from the main summary card. This child component can be used from within the block passed to the summary card to ensure that the correct style and accessibility can be achieved whilst allowing the flexibility to render other content in the block. This pattern is inspired by the way UI libraries such as Chakra UI compose components out of sub-components that can be swapped for alternative implementations where necessary or ignored if they are not needed.

--- a/app/components/admin/editions/show/attachments_summary_card_component.erb
+++ b/app/components/admin/editions/show/attachments_summary_card_component.erb
@@ -1,7 +1,32 @@
 <section class="app-view-summary__section app-view-summary__section--attachments">
-  <%= render "components/summary_card", {
+  <%= render "components/summary_card/summary_card", {
     title: "Attachments",
     summary_card_actions: summary_card_actions,
-    rows: rows,
-  } %>
+  } do %>
+    <dl class="govuk-summary-list">
+      <% rows.each do |row| %>
+        <div class="govuk-summary-list__row">
+          <dt class="govuk-summary-list__key">
+            <%= row[:key] %>
+          </dt>
+          <dd class="govuk-summary-list__value">
+            <%= row[:value] %>
+          </dd>
+          <% if row[:actions].present? %>
+            <dd class="govuk-summary-list__actions">
+              <% row[:actions].each do |action| %>
+                <%= render("components/summary_card/summary_list_action", {
+                  opens_in_new_tab: action[:opens_in_new_tab],
+                  label: action[:label],
+                  key: row[:key],
+                  href: action[:href],
+                  destructive: action[:destructive],
+                }) %>
+              <% end %>
+            </dd>
+          <% end %>
+        </div>
+      <% end %>
+    </dl>
+  <% end %>
 </section>
