--- a/app/views/admin/preview/preview.html.erb
+++ b/app/views/admin/preview/preview.html.erb
@@ -1,5 +1,5 @@
 <% initialise_script "GOVUK.adminPreview" %>
-<section class="document_page">
+<section>
   <article class="document">
     <div class="body">
       <%= govspeak_to_admin_html params[:body], @images, @attachments, @alternative_format_contact_email %>
