--- a/app/views/admin/editorial_remarks/new.html.erb
+++ b/app/views/admin/editorial_remarks/new.html.erb
@@ -4,7 +4,7 @@
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-    <section class="document_page" id="<%= dom_id(@edition) %>">
+    <section id="<%= dom_id(@edition) %>">
       <%= render "admin/editions/edition", edition: @edition %>
     </section>
   </div>
