--- a/app/views/admin/dashboard/index.html.erb
+++ b/app/views/admin/dashboard/index.html.erb
@@ -67,7 +67,7 @@
       visible_counters: true,
       items: [
         link_to("GDS support form (Zendesk)", "https://www.gov.uk/support/internal", class: "govuk-link"),
-        link_to("Find in admin bookmarklet", admin_find_in_admin_bookmarklet_instructions_index_path, class: "govuk-link"),
+        link_to("'Find in admin' bookmarklet", admin_find_in_admin_bookmarklet_instructions_index_path, class: "govuk-link"),
       ],
     } %>
   </div>
