Fix view error rendering
Adding :image errors to :"image.file" instead, since the `file_upload` component
can only render one id. This way, both image and file errors will be rendered with
the correct styling and the error summary at the top of the page will correctly link to them.

Previous behaviour: The `ImageValidator` adds its errors to :"image.file" whilst the
`Feature` model has presence validation on :image. At any given time one of these will not
have the correct id rendering. The error summary at the top of the page will have the desired
hrefs, but they will not point to anything. The error styling from the design system will also
not work for the error whose id is not passed to the `file_upload` component.

Co-authored-by: Iris Lau <iris.lau@digital.cabinet-office.gov.uk>
(cherry picked from commit 447922e00de96af521f61288709a9cb4b1101735)

--- a/app/views/admin/features/new.html.erb
+++ b/app/views/admin/features/new.html.erb
@@ -20,8 +20,8 @@
         },
         hint: "Select a 960px wide and 640px tall image to be shown when featuring",
         name: "feature[image_attributes][file]",
-        id: "feature_image",
-        error_items: errors_for(@feature.errors, :image),
+        id: "feature_image_file",
+        error_items: errors_for(@feature.errors, :"image.file"),
       } %>
 
       <%= render "govuk_publishing_components/components/input", {
