Removal of legacy views: internet explorer and other browser views

--- a/app/views/admin/find_in_admin_bookmarklet/index.html.erb
+++ b/app/views/admin/find_in_admin_bookmarklet/index.html.erb
@@ -1,3 +1,4 @@
+<% content_for :page_title, "'Find in admin' bookmarklet" %>
 <% content_for :title, "'Find in admin' bookmarklet" %>
 <% content_for :title_margin_bottom, 6 %>
 
