--- a/app/views/admin/editions/show/_main.html.erb
+++ b/app/views/admin/editions/show/_main.html.erb
@@ -1,5 +1,5 @@
 <div class="app-view-summary__main">
-  <section class="app-view-summary__section page-header">
+  <section class="app-view-summary__section">
     <div class="app-view-summary__document-summary">
       <p class="govuk-body-lead"><%= @edition.summary %></p>
     </div>
