--- a/app/views/admin/cabinet_ministers/reorder_also_attends_cabinet_roles.html.erb
+++ b/app/views/admin/cabinet_ministers/reorder_also_attends_cabinet_roles.html.erb
@@ -4,4 +4,5 @@
 <%= render "reorder",
   list: @roles,
   form_url: order_also_attends_cabinet_roles_admin_cabinet_ministers_path,
-  cancel_path: admin_cabinet_ministers_path(anchor: "also_attends_cabinet") %>
+  cancel_path: admin_cabinet_ministers_path(anchor: "also_attends_cabinet"),
+  name: "ministerial_roles[ordering]" %>
