Use UserOrderableClass#reorder! for take part pages
This follows the pattern established in this PR
https://github.com/alphagov/whitehall/pull/8557
for active record associations of adding a second reorder method with
doesn't skip callbacks and validations.

At the moment, the after_commit callbacks here are handlded syncronously
so the endpoint is really slow.

I'm going to add a seond commit following this that moves republishing
the get involved page out of a callback and into the controller actions
because it's simple and take part pages are isolated so there's no risk
of them being interacted with outside of this small section of Whitehall.

--- a/app/views/admin/take_part_pages/update_order.html.erb
+++ b/app/views/admin/take_part_pages/update_order.html.erb
@@ -12,6 +12,7 @@
       } %>
 
       <%= render "govuk_publishing_components/components/reorderable_list", {
+        input_name: "take_part_pages[ordering]",
         items: @take_part_pages.map do |take_part_page|
           {
             id: take_part_page.id,
