Rename summary card
- rename component files to follow gem component conventions, in order to work with component auditing tools
- summary card component shouldn't include 'component' in the file or class name

--- a/app/views/components/_summary_card.html.erb
+++ b/app/views/components/_summary_card.html.erb
@@ -4,7 +4,7 @@
   summary_card_actions ||= []
   rows ||=[]
 %>
-<%= tag.div class: "app-c-summary-card-component", id: id, data: data_attributes do %>
+<%= tag.div class: "app-c-summary-card", id: id, data: data_attributes do %>
   <div class="govuk-summary-card">
     <div class="govuk-summary-card__title-wrapper">
       <h2 class="govuk-summary-card__title"><%= title %></h2>
