Override corporate information page form template to change cancel link
The cancel routes helper is a very inelegant way to work around the fact that our edition template partials are not being used via composition.

I have therefore chosen to unDRY the corporate information page template so that it is not as tightly coupled to the basic edition template.

This enables us to override the cancel link path at the template level, where we know exactly what type of document we are dealing with, rather than having to re-evaluate what sort of document we have within a view helper.

--- a/app/views/admin/corporate_information_pages/_form.html.erb
+++ b/app/views/admin/corporate_information_pages/_form.html.erb
@@ -1,2 +1,38 @@
-<%= standard_edition_form(edition) do |form| %>
+<%= form_for form_url_for_edition(edition), as: :edition, html: { class: edition_form_classes(edition), multipart: true }, data: { module: "EditionForm LocaleSwitcher", "rtl-locales": Locale.right_to_left.collect(&:to_param) } do |form| %>
+  <%= render("standard_fields", form:, edition:) %>
+  <%= render("settings_fields", form:, edition:) %>
+  <div class="publishing-controls">
+    <% if edition.change_note_required? %>
+      <%= render("change_notes", form:, edition:) %>
+    <% end %>
+
+    <div class="govuk-button-group">
+      <%= render "govuk_publishing_components/components/button", {
+        text: "Save",
+        value: "save",
+        name: "save",
+        data_attributes: {
+          module: "gem-track-click",
+          "track-category": "form-button",
+          "track-action": "#{edition.class.name.demodulize.underscore.dasherize}-button",
+          "track-label": "Save",
+        },
+      } %>
+
+      <%= render "govuk_publishing_components/components/button", {
+        text: "Save and go to document summary",
+        secondary_solid: true,
+        data_attributes: {
+          module: "gem-track-click",
+          "track-category": "form-button",
+          "track-action": "#{edition.class.name.demodulize.underscore.dasherize}-button",
+          "track-label": "Save and continue",
+        },
+      } %>
+
+      <% cancel_link_path = edition.new_record? ? polymorphic_path([:admin, edition.owning_organisation, CorporateInformationPage]) : admin_edition_path(edition) %>
+      <%= link_to "Cancel", cancel_link_path, class: "govuk-link govuk-link--no-visited-state" %>
+    </div>
+
+  </div>
 <% end %>
