Revert Rails 7.1 upgrade
We're rolling back because the way we are importing our secrets into the Rails credentials object doesn't seem to be working. We started seeing that the GOV.UK Notify API client was not configured because the notify API key was not set.

--- a/app/views/admin/edition_translations/edit.html.erb
+++ b/app/views/admin/edition_translations/edit.html.erb
@@ -72,7 +72,7 @@
           text: "Save",
         } %>
 
-        <%= link_to("Cancel", admin_edition_path(@edition), class: "govuk-link govuk-link--no-visited-state") %>
+        <%= link_to("Cancel", admin_cancel_path(@edition), class: "govuk-link govuk-link--no-visited-state") %>
       </div>
     <% end %>
   </section>
