--- a/app/views/admin/editions/_save_or_continue_or_cancel.html.erb
+++ b/app/views/admin/editions/_save_or_continue_or_cancel.html.erb
@@ -22,5 +22,5 @@
     },
   } %>
 
-  <%= link_to "Cancel", edition.new_record? ? admin_editions_path : admin_edition_path(edition), class: "govuk-link govuk-link--no-visited-state" %>
+  <%= link_to "Cancel", admin_cancel_path(edition), class: "govuk-link govuk-link--no-visited-state" %>
 </div>
