--- a/app/views/admin/edition_translations/confirm_destroy.html.erb
+++ b/app/views/admin/edition_translations/confirm_destroy.html.erb
@@ -14,7 +14,7 @@
         destructive: true,
       } %>
 
-      <%= link_to("Cancel", admin_edition_path(@edition), class: "govuk-link govuk-link--no-visited-state") %>
+      <%= link_to("Cancel", admin_cancel_path(@edition), class: "govuk-link govuk-link--no-visited-state") %>
     </div>
     <% end %>
   </section>
