Use `title` for the worldwide office views
Now that we have a title method for the legacy worldwide organisation model, we
can make these view compatible with both the legacy model and the new
editionable model.

--- a/app/views/admin/worldwide_offices/confirm_destroy.html.erb
+++ b/app/views/admin/worldwide_offices/confirm_destroy.html.erb
@@ -1,5 +1,5 @@
-<% content_for :context, @worldwide_organisation.name %>
-<% content_for :page_title, "Delete office for #{@worldwide_organisation.name}" %>
+<% content_for :context, @worldwide_organisation.title %>
+<% content_for :page_title, "Delete office for #{@worldwide_organisation.title}" %>
 <% content_for :title, "Delete office" %>
 <% content_for :title_margin_bottom, 6 %>
 
