--- a/app/views/admin/worldwide_offices/index.html.erb
+++ b/app/views/admin/worldwide_offices/index.html.erb
@@ -3,8 +3,8 @@
     href: admin_worldwide_organisations_path,
   } %>
 <% end %>
-<% content_for :page_title, "#{@worldwide_organisation.name} offices" %>
-<% content_for :title, @worldwide_organisation.name %>
+<% content_for :page_title, "#{@worldwide_organisation.title} offices" %>
+<% content_for :title, @worldwide_organisation.title %>
 <% content_for :context, "Worldwide organisation" %>
 <% content_for :title_margin_bottom, 4 %>
 
