--- a/app/views/admin/worldwide_offices/new.html.erb
+++ b/app/views/admin/worldwide_offices/new.html.erb
@@ -2,7 +2,7 @@
   <div class="govuk-grid-column-two-thirds">
     <% content_for :page_title, "New office details" %>
     <% content_for :title, "New office details" %>
-    <% content_for :context, @worldwide_organisation.name %>
+    <% content_for :context, @worldwide_organisation.title %>
     <% content_for :error_summary, render(Admin::ErrorSummaryComponent.new(object: @worldwide_office, parent_class: "worldwide_office")) %>
 
     <%= render partial: "form", locals: {worldwide_office: @worldwide_office, worldwide_organisation: @worldwide_organisation} %>
