Make the worldwide offices work for editionable worldwide organisations
This modifies the existing worldwide offices controller and model so that they
are compatible with editionable worldwide organisations as well as legacy
worldwide organisations.

Note: When the editionable worldwide organisations feature flag is enabled,
performing actions related to the worldwide offices of legacy worldwide
organisations will not function (and vice versa). This should be okay as we
don't want these features running side-by-side. The next step will be to hide
the legacy actions when the flag is enabled for an extra level of safety.

--- a/app/views/admin/worldwide_offices/_form.html.erb
+++ b/app/views/admin/worldwide_offices/_form.html.erb
@@ -1,4 +1,7 @@
-<%= form_for [:admin, worldwide_organisation, worldwide_office] do |office_form| %>
+<%= form_for @worldwide_office, url:
+  @worldwide_office.persisted? ?
+    admin_worldwide_organisation_worldwide_office_path(@worldwide_organisation, @worldwide_office) :
+    admin_worldwide_organisation_worldwide_offices_path(@worldwide_organisation) do |office_form| %>
   <%= render "govuk_publishing_components/components/input", {
     label: {
       text: "Title (required)",
