Add alert messages conditional on status logic

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -41,6 +41,7 @@ $govuk-page-width: 1140px;
 @import "./admin/views/people";
 @import "./admin/views/roles";
 @import "./admin/views/users";
+@import "./admin/views/status-page-alert";
 @import "./admin/views/summary";
 @import "./admin/views/take-part";
 @import "./admin/views/topical-events-index";
