--- a/app/views/layouts/design_system.html.erb
+++ b/app/views/layouts/design_system.html.erb
@@ -26,6 +26,8 @@
 
   <%= render "govuk_publishing_components/components/skip_link" %>
 
+  <%= render partial: "layouts/status-page-alert" %>
+
   <%= render partial: "shared/header" %>
 
   <div class="govuk-width-container">
