Add date and time

--- a/app/views/layouts/_status-page-alert.html.erb
+++ b/app/views/layouts/_status-page-alert.html.erb
@@ -24,7 +24,7 @@
       <p class="govuk-!-font-weight-bold">Happening soon</p>
 
       <ul>
-        <li>Delayed publishing due to scheduled maintenance from [datetime] to [datetime]</li>
+        <li>Delayed publishing due to scheduled maintenance from <span class="startDateTime">[datetime]</span> to <span class="startEndTime">[datetime]</span></li>
       </ul>
       
       <p>To learn more visit the <a href="https://status.publishing.service.gov.uk/">GOV.UK status page</a></p>
